--- a/KrausGRA/UI/wndBoxInformation.xaml
+++ b/KrausGRA/UI/wndBoxInformation.xaml
@@ -21,7 +21,7 @@
 
                     <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Top="100" CornerRadius="20" Background="#B21B4064" Height="677">
                         <Canvas Name="cnNewReturn" Width="340" Canvas.Top="128" >
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FFD49611" Canvas.Left="15" BorderBrush="Black">
+                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FF424140" Canvas.Left="15" BorderBrush="Black">
                                 <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="New Return" Margin="-1,-1,-1,1"/>
                             </Border>
                             <TextBlock TextWrapping="Wrap" Text="New Return" FontWeight="Bold" TextAlignment="Center" FontSize="35" Width="332" Canvas.Left="5"  Canvas.Top="6" Foreground="#FFD49611"/>
@@ -29,7 +29,7 @@
                             <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="516" Width="305" Background="#FF474747">
                                 <Button x:Name="btnPONumber" Style="{StaticResource win8btn}" Content="Enter Number" Margin="-1,-1,-1,1"/>
                             </Border>
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="271" Width="305" Background="#FF337829">
+                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="271" Width="305" Background="#FF3E3F42">
                                 <Button x:Name="btnBoxNumber" Style="{StaticResource win8btn}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
                             </Border>
                             <TextBlock TextWrapping="Wrap" Text="Tracking #/ Cusromer PO#/SR # of Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="371" FontSize="35" Width="337" Foreground="White"/>
@@ -41,7 +41,7 @@
                             <TextBlock Name="tbLoginText" Text="Please scan your badge" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
                             <TextBlock Name="tbTitleLogin" Style="{StaticResource tbFormTitle}"  Text="Login" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
-                                <TextBox Name="txtLogin" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtLogin_KeyDown"/>
+                                <TextBox Name="txtLogin" TextWrapping="Wrap" Text="press enter" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtLogin_KeyDown"/>
                             </Border>
                         </Canvas>
                     </Border>
@@ -51,7 +51,7 @@
                             <TextBlock Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
                             <TextBlock Name="tbTitleScan" Style="{StaticResource tbFormTitle}"  Text="Scan" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
-                                <TextBox Name="txtScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
+                                <TextBox Name="txtScan" TextWrapping="Wrap" Text="Press Enter" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
                             </Border>
                         </Canvas>
                     </Border>
