--- a/KrausGRA/UI/wndBoxInformation.xaml
+++ b/KrausGRA/UI/wndBoxInformation.xaml
@@ -26,13 +26,13 @@
                             </Border>
                             <TextBlock TextWrapping="Wrap" Text="New Return" FontWeight="Bold" TextAlignment="Center" FontSize="35" Width="332" Canvas.Left="5"  Canvas.Top="6" Foreground="#FFD49611"/>
                             <TextBlock TextWrapping="Wrap" Text="Scan Barcode from Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="172" FontSize="35" Width="337" Foreground="#FF79CB84"/>
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="516" Width="305" Background="#FF474747">
-                                <Button x:Name="btnPONumber" Style="{StaticResource win8btn}" Content="Enter Number" Margin="-1,-1,-1,1"/>
+                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="423" Width="305" Background="#FF474747">
+                                <Button x:Name="btnPONumber" Style="{StaticResource win8btn}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnPONumber_Click"/>
                             </Border>
                             <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="271" Width="305" Background="#FF3E3F42">
                                 <Button x:Name="btnBoxNumber" Style="{StaticResource win8btn}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
                             </Border>
-                            <TextBlock TextWrapping="Wrap" Text="Tracking #/ Cusromer PO#/SR # of Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="371" FontSize="35" Width="337" Foreground="White"/>
+                            <TextBlock TextWrapping="Wrap" Text="SR # of Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="371" FontSize="35" Width="337" Foreground="White"/>
                         </Canvas>
                     </Border>
 
@@ -52,6 +52,16 @@
                             <TextBlock Name="tbTitleScan" Style="{StaticResource tbFormTitle}"  Text="Scan" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
                                 <TextBox Name="txtScan" TextWrapping="Wrap" Text="Press Enter" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
+                            </Border>
+                        </Canvas>
+                    </Border>
+
+                    <Border Name="bdrSrNumber" Visibility="Hidden" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="Black" BorderThickness="1" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
+                        <Canvas>
+                            <TextBlock Name="tbsrScanText" Text="Please Enter SR Number" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
+                            <TextBlock Name="tbsrTitleScan" Style="{StaticResource tbFormTitle}"  Text="SR Number" Height="52" Width="264" Canvas.Left="8" Canvas.Top="8"/>
+                            <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
+                                <TextBox Name="txtsrScan" TextWrapping="Wrap" Text="Press Enter" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtsrScan_KeyDown" />
                             </Border>
                         </Canvas>
                     </Border>
