--- a/KrausGRA/UI/wndBoxInformation.xaml
+++ b/KrausGRA/UI/wndBoxInformation.xaml
@@ -19,7 +19,7 @@
                         <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
                     </Canvas>
 
-                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Top="100" CornerRadius="20" Background="#B21B4064" Height="677">
+                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Left="1" Canvas.Top="100" CornerRadius="20" Background="#B21B4064" Height="677">
                         <Canvas Name="cnNewReturn" Width="340" Canvas.Top="128" >
                             <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FF424140" Canvas.Left="15" BorderBrush="Black">
                                 <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="New Return" Margin="-1,-1,-1,1"/>
