--- a/KrausGRA/UI/wndSrNumberInfo.xaml
+++ b/KrausGRA/UI/wndSrNumberInfo.xaml
@@ -2,11 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        Title="Kraus GRA System" Height="800" Width="1400" WindowState="Maximized">
-    
+
     <Viewbox >
         <Grid>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
-                <Canvas Margin="0,0,0,0" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" Background="#FFE3E9EA" >
+                <Canvas Margin="1,1,1,1" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" Background="#FFE3E9EA" >
                     <Canvas x:Name="cnTitle" Height="100" Width="1400">
                         <Canvas.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -17,11 +17,185 @@
                         <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausGra;component/Images/logo.png"/>
                         <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
                     </Canvas>
+                    <Canvas Name="cvMainArea" Height="677" Canvas.Top="100" Width="1400">
+                        <TabControl Height="677" Width="1400" BorderBrush="#FF405EB8" Margin="2,2,2,2">
+                            <TabItem Header="RMA Details" Height="40" Width="200" FontSize="30" Foreground="#FF1BACFF" BorderBrush="#FF405EB8" BorderThickness="2">
+                                <Border Name="bdrmain" >
+                                    <Canvas Name="cvsTb1main" Margin="0,0,0,0">
+                                        <Border Height="174" Width="1360" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
+                                            <Canvas Margin="0,0,0,0">
+                                                <Border Height="52" Width="1363" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
+                                                    <TextBlock TextWrapping="Wrap" Text="RMA Details" FontSize="30" Foreground="White" Margin="10,6,1191,0"/>
+                                                </Border>
+                                                <Label Name="lblcRMANumber" Content="RMA Number : " Style="{StaticResource lblConstant}" Canvas.Top="71" Width="143" Canvas.Left="31"/>
+                                                <Label Name="lblRMANumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="174" Canvas.Top="71" Width="254" Height="33"/>
+
+                                                <Label Name="lblcRMARewDate" Content="RMA Rewuest Date : " Style="{StaticResource lblConstant}" Canvas.Left="499" Canvas.Top="71" Width="193"/>
+                                                <Label Name="lblRMARewDate" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="697" Canvas.Top="71" Width="254" Height="33"/>
+
+                                                <Label Name="lblcVendorNumber" Content="Vendor Number : " Style="{StaticResource lblConstant}" Canvas.Top="123" Width="164" Canvas.Left="11"/>
+                                                <Label Name="lblVendorNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="180" Canvas.Top="123" Width="254" Height="33"/>
+
+                                                <Label Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="123" Width="147" Canvas.Left="551"/>
+                                                <Label Name="lblVendorName" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="697" Canvas.Top="121" Width="254" Height="33"/>
+
+                                                <Label Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="71" Width="127" Canvas.Left="956"/>
+                                                <ComboBox Name="cmbRMAStatus" Height="32" Width="258" Canvas.Left="1088" Canvas.Top="72"/>
+
+
+                                                <Label Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="123" Width="97" Canvas.Left="986"/>
+                                                <ComboBox Name="cmbRMADecision" Height="32" Width="258" Canvas.Left="1088" Canvas.Top="122"/>
+
+                                            </Canvas>
+                                        </Border>
+
+                                        <Border Height="238" Width="1360" CornerRadius="10" Canvas.Top="210" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
+                                            <Canvas Margin="0,0,0,0">
+                                                <Border Height="52" Width="1363" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
+                                                    <TextBlock TextWrapping="Wrap" Text="PO / Order Details" FontSize="30" Foreground="White" Margin="10,6,1097,0"/>
+                                                </Border>
+                                                <Label Name="lblcPoNumber" Content="PO Number : " Style="{StaticResource lblConstant}" Canvas.Top="69" Width="143" Canvas.Left="38"/>
+                                                <Label Name="lblPoNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="173" Canvas.Top="67" Width="254" Height="33"/>
+
+                                                <Label Name="lblcName" Content="Customer Name : " Style="{StaticResource lblConstant}" Canvas.Top="69" Width="164" Canvas.Left="460"/>
+                                                <Label Name="lblName"  Style="{StaticResource lblVeriable}" Canvas.Left="629" Canvas.Top="69" Width="344" Height="33">
+                                                    <Label.Content>
+                                                        <TextBlock Name="tbCustomerName" TextWrapping="NoWrap" Text="N/A" Width="334"/>
+                                                    </Label.Content>
+                                                </Label>
+
+                                                <Label Name="lblcCustomerAddress" Content="Customer Address : " Style="{StaticResource lblConstant}" Canvas.Top="111" Width="187" Canvas.Left="439"/>
+                                                <Label Name="lblCustomerAddress"  Style="{StaticResource lblVeriable}" Canvas.Left="439" Canvas.Top="143" Width="347" Height="64">
+                                                    <Label.Content>
+                                                        <TextBlock Text="N/A" TextWrapping="Wrap" Margin="0,0,0,0" Width="337" Height="64" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
+                                                    </Label.Content>
+                                                </Label>
+
+                                                <Label Name="lblcTrackingNumber" Content="Tracking Number : " Style="{StaticResource lblConstant}" Canvas.Top="111" Width="184" Canvas.Left="-3"/>
+                                                <Label Name="lblTrackingNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="173" Canvas.Top="111" Width="261" Height="33"/>
+
+                                                <Label Name="lblcCustCity" Content="City : " Style="{StaticResource lblConstant}" Canvas.Top="69" Width="143" Canvas.Left="949"/>
+                                                <Label Name="lblCustCity" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="1092" Canvas.Top="69" Width="254" Height="33"/>
+
+                                                <Label Name="lblcState" Content="State/Province : " Style="{StaticResource lblConstant}" Canvas.Top="111" Width="163" Canvas.Left="929"/>
+                                                <Label Name="lblState" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="1092" Canvas.Top="111" Width="254" Height="33"/>
+
+                                                <Label Name="lblcZipCode" Content="Zip/Postal Code: " Style="{StaticResource lblConstant}" Canvas.Top="149" Width="163" Canvas.Left="929"/>
+                                                <Label Name="lblZipCode" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="1092" Canvas.Top="149" Width="254" Height="33"/>
+
+                                                <Label Name="lblcCountry" Content="Country : " Style="{StaticResource lblConstant}" Canvas.Top="187" Width="163" Canvas.Left="929"/>
+                                                <Label Name="lblCountry" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="1092" Canvas.Top="185" Width="254" Height="33"/>
+
+
+                                            </Canvas>
+                                        </Border>
+
+
+                                    </Canvas>
+                                </Border>
+                            </TabItem>
+                            <TabItem Header="Return Details" Height="40" Width="200" FontSize="30" Foreground="#FF1BACFF" BorderBrush="#FF405EB8" BorderThickness="2">
+                                <Border Name="bdrmain2" >
+                                    <Canvas Name="cvsTb1main2" Margin="0,0,0,0">
+                                        <!-- Grid View-->
+                                        <DataGrid  x:Name="dgPackageInfo"
+                                                   SelectionMode="Extended" 
+                                                   ItemsSource="{Binding}" 
+                                                   HorizontalAlignment="Center" 
+                                                   VerticalAlignment="Center"
+                                                   Width="1380" 
+                                                   ScrollViewer.CanContentScroll="False" 
+                                                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                                   CanUserAddRows="False"    
+                                                   AutoGenerateColumns="False" 
+                                                   FontSize="17" 
+                                                   Background="#FFE6E6E6" 
+                                                   SelectionUnit="Cell" 
+                                                   BorderThickness="1" 
+                                                   Cursor="Hand"   
+                                                   BorderBrush="{x:Null}" 
+                                                   HorizontalGridLinesBrush="#FF575757" 
+                                                   VerticalGridLinesBrush="Gray"
+                                                   Height="545" >
+
+                                            <DataGrid.Resources>
+                                                <Style x:Key="HeaderStyleKey" TargetType="{x:Type DataGridColumnHeader}">
+                                                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                                    <Setter Property="FontSize" Value="20"/>
+                                                </Style>
+                                            </DataGrid.Resources>
+
+                                            <DataGrid.Columns>
+                                                <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" Header="Item" Width="50"  >
+                                                    <DataGridTemplateColumn.CellTemplate>
+                                                        <DataTemplate >
+                                                            <StackPanel >
+                                                                <CheckBox Name="chkIsItemPresent" Content=""/>
+                                                            </StackPanel>
+                                                        </DataTemplate>
+                                                    </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn>
+                                                <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+                                                                    Binding="{Binding SKU}" 
+                                                                    Header="SKU"  
+                                                                    Width="180" 
+                                                                    IsReadOnly="True" />
+
+                                                <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+                                                                    Binding="{Binding ProductName}" 
+                                                                    Header="Product Name" 
+                                                                    Width="250" 
+                                                                    IsReadOnly="True" />
+
+                                                <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+                                                                        Header="Qty"
+                                                                        Width="150">
+
+                                                    <DataGridTemplateColumn.CellTemplate>
+                                                        <DataTemplate>
+                                                            <StackPanel Name="spQty1" Width="150">
+                                                                <TextBlock Name="tbQty" TextAlignment="Center" Width="150" Text="0" FontSize="20"/>
+                                                                <StackPanel Name="spQty2" Orientation="Horizontal">
+                                                                    <Button Name="btnMinus" Content="-" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey } }" Width="75" Height="40" FontSize="30" Foreground="White" Background="#FF464646" />
+                                                                    <Button Name="btnPluse" Content="+" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="75" Height="40" FontSize="30" Foreground="White" Background="#FF464646"/>
+                                                                </StackPanel>
+                                                            </StackPanel>
+                                                        </DataTemplate>
+                                                    </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn>
+
+                                                <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"
+                                                                        Header="Image" 
+                                                                        Width="*"  >
+                                                    <DataGridTemplateColumn.CellTemplate>
+                                                        <DataTemplate >
+                                                            <StackPanel >
+                                                                <Image x:Name="ImgSKU"  />
+                                                            </StackPanel>
+                                                        </DataTemplate>
+                                                    </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn>
+                                            </DataGrid.Columns>
+
+                                        </DataGrid>
+                                        <!-- Grid Finish-->
+                                        <Border Name="bdrButton" Height="62" Width="249" Canvas.Left="1088" Canvas.Top="553">
+                                            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                                                Content="Save" Width="249" Height="62" Background="#FF464343" Foreground="#FFF9F9F9" OpacityMask="Black"
+                                                
+                                                />
+
+                                        </Border>
+                                    </Canvas>
+                                </Border>
+                            </TabItem>
+                        </TabControl>
+                    </Canvas>
 
                 </Canvas>
             </Border>
 
-            
+
         </Grid>
     </Viewbox>
 </Window>
