--- a/KrausxRGA/UI/MainWindow.xaml
+++ b/KrausxRGA/UI/MainWindow.xaml
@@ -146,7 +146,7 @@
                     <Canvas>
                         <Button x:Name="btnOpenCamera" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"  Content="" Width="69" Height="60" BorderBrush="{x:Null}" BorderThickness="0" Click="btnOpenCamera_Click" Canvas.Left="32" >
                             <Button.Background>
-                                <ImageBrush ImageSource="/KrausGra;component/Images/Camera Folder.png"/>
+                                <ImageBrush ImageSource="/KrausRGA;component/Images/Camera Folder.png"/>
                             </Button.Background>
                         </Button>
                         <TextBlock Style="{StaticResource TextMenu}" TextWrapping="Wrap" Text="Open Camera" Canvas.Top="59" Width="123"/>
@@ -159,7 +159,7 @@
                             <GradientStop Color="#FF686868" Offset="0.988"/>
                         </LinearGradientBrush>
                     </Canvas.Background>
-                    <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausGra;component/Images/logo.png"/>
+                    <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
                     <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="45" Width="193" FontSize="30" Foreground="White"/>
                 </Canvas>
                 <Border x:Name="bdrCamera" Visibility="Hidden" Canvas.Top="291" >
@@ -217,10 +217,10 @@
                             <Canvas  >
                                 <Button x:Name="btnStop" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0" Height="60" Width="78" Click="btnStop_Click">
                                     <Button.Background>
-                                        <ImageBrush ImageSource="/KrausGra;component/Images/Stopicon.png"/>
+                                        <ImageBrush ImageSource="/KrausRGA;component/Images/Stopicon.png"/>
                                     </Button.Background>
                                     <Button.Foreground>
-                                        <ImageBrush ImageSource="/KrausGra;component/Images/Stopicon.png"/>
+                                        <ImageBrush ImageSource="/KrausRGA;component/Images/Stopicon.png"/>
                                     </Button.Foreground>
                                 </Button>
                                 <TextBlock x:Name="tbkStop" Text="Stop Camera" HorizontalAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White"/>
@@ -255,10 +255,10 @@
                                 <Canvas >
                                     <Button x:Name="btnCapture" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}"  BorderThickness="0" Height="60" Width="78" Click="SnapshotButton_Click" >
                                         <Button.Background>
-                                            <ImageBrush ImageSource="/KrausGra;component/Images/iconcamera.png"/>
+                                            <ImageBrush ImageSource="/KrausRGA;component/Images/iconcamera.png"/>
                                         </Button.Background>
                                         <Button.Foreground>
-                                            <ImageBrush ImageSource="/KrausGra;component/Images/iconcamera.png"/>
+                                            <ImageBrush ImageSource="/KrausRGA;component/Images/iconcamera.png"/>
                                         </Button.Foreground>
                                     </Button>
                                     <TextBlock x:Name="tbkCapture" Text="Capture" TextAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White"/>
@@ -292,10 +292,10 @@
                                 <Canvas Margin="2,12,-2,-12" >
                                     <Button x:Name="btnStartCapture" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0" Height="60" Width="78" Click="btnStartCapture_Click"  >
                                         <Button.Background>
-                                            <ImageBrush ImageSource="/KrausGra;component/Images/iconplay.png"/>
+                                            <ImageBrush ImageSource="/KrausRGA;component/Images/iconplay.png"/>
                                         </Button.Background>
                                         <Button.Foreground>
-                                            <ImageBrush ImageSource="/KrausGra;component/Images/iconplay.png"/>
+                                            <ImageBrush ImageSource="/KrausRGA;component/Images/iconplay.png"/>
                                         </Button.Foreground>
                                     </Button>
                                     <TextBlock x:Name="tbkStartCapture" Text="Start Camera" HorizontalAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White"/>
