--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="KrausRGA.UI.wndBoxInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kraus GRA System" Height="800" Width="1400"
+        Title="Kraus GRA System" Height="800" Width="1393"
         Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized">
     <Viewbox >
         <Grid>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
                 <Canvas Margin="0,0,0,0" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" Background="#FFE3E9EA" >
+                   
                     <Canvas x:Name="cnTitle" Height="100" Width="1400">
                         <Canvas.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -14,7 +15,7 @@
                                 <GradientStop Color="#FF686868" Offset="0.988"/>
                             </LinearGradientBrush>
                         </Canvas.Background>
-                        <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausGra;component/Images/logo.png"/>
+                        <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
                         <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="RGA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
                     </Canvas>
 
@@ -64,6 +65,7 @@
                             </Border>
                         </Canvas>
                     </Border>
+                    
                 </Canvas>
             </Border>
         </Grid>
