--- a/KrausxRGA/UI/MainWindow.xaml
+++ b/KrausxRGA/UI/MainWindow.xaml
@@ -162,7 +162,7 @@
                     <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
                     <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="45" Width="193" FontSize="30" Foreground="White"/>
                 </Canvas>
-                <Border x:Name="bdrCamera" Visibility="Hidden" Canvas.Top="291" >
+                <Border x:Name="bdrCamera" Visibility="Visible" Canvas.Top="291" >
                     <Border.Style>
                         <Style TargetType="{x:Type Border}">
                             <Style.Triggers>
