--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -123,7 +123,7 @@
                                     		HorizontalGridLinesBrush="#FF575757" 
                                     		VerticalGridLinesBrush="Gray"
                                     		Height="545"  
-                                                   
+                                                   SelectedIndex="-1" SelectionChanged="dgPackageInfo_SelectionChanged"
                                                    >
 
                                             <DataGrid.Resources>
@@ -187,9 +187,7 @@
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate >
                                                             <ContentControl MouseLeftButtonDown="ContentControl_MouseLeftButtonDown">
-                                                                <StackPanel Background="#FFA4A4A4"  >
-                                                                    <Image x:Name="ImgSKU" />
-                                                                </StackPanel>
+                                                                <StackPanel ScrollViewer.HorizontalScrollBarVisibility="Auto"  Name="spProductImages" Background="#FFA4A4A4" Orientation="Horizontal" />
                                                             </ContentControl>
                                                         </DataTemplate>
                                                     </DataGridTemplateColumn.CellTemplate>
@@ -208,7 +206,7 @@
                                     			OpacityMask="Black" />
                                         </Border>
 
-                                        <Border x:Name="bdrCamera" Visibility="Hidden" Canvas.Top="291" >
+                                        <Border x:Name="bdrCamera" Visibility="Visible" Canvas.Top="291" >
                                             <Border.Style>
                                                 <Style TargetType="{x:Type Border}">
                                                     <Style.Triggers>
@@ -234,7 +232,7 @@
                                                 </Style>
                                             </Border.Style>
                                             <Canvas x:Name="cnCamera" Height="244" Width="1310" Visibility="Visible"  Background="#B2323232" >
-                                                <cam:Webcam x:Name="WebCamCtrl"  Background="#FF3A3939" BorderBrush="#FF3C3C3C" BorderThickness="2" Height="232" Canvas.Left="120" Canvas.Top="8" Width="286"/>
+                                                <cam:Webcam x:Name="WebCamCtrl"  Background="#FF3A3939" BorderBrush="#FF3C3C3C" BorderThickness="2" Height="220" Canvas.Left="126" Canvas.Top="12" Width="272"/>
                                                 <Border x:Name="bdrStop" Visibility="Visible" BorderBrush="Black" BorderThickness="0" Height="81" Canvas.Top="24" Width="88" CornerRadius="10" Canvas.Left="-147">
                                                     <Border.Style>
                                                         <Style TargetType="{x:Type Border}">
@@ -311,7 +309,7 @@
                                                                     <ImageBrush ImageSource="/KrausRGA;component/Images/iconcamera.png"/>
                                                                 </Button.Foreground>
                                                             </Button>
-                                                            <TextBlock x:Name="tbkCapture" Text="Capture" TextAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White" FontSize="15"/>
+                                                            <TextBlock x:Name="tbkCapture" Text="Capture" TextAlignment="Center" Height="15" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White" FontSize="15"/>
                                                         </Canvas>
                                                     </Border>
                                                     <Border x:Name="bdrStartCapture"  Visibility="Visible" BorderThickness="0" Height="71" Canvas.Top="30" Width="78" CornerRadius="10" Canvas.Left="10">
